libs/preprocessor/tests/errors/pe2_unexpected_eof/stderr.ansi
[31m[PE2] Error:[0m unexpected end of file
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:4[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mf[0m
 [38;5;240m  │[0m    [38;5;201m┬[0m  
 [38;5;240m  │[0m    [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m Unexpected end of file
[38;5;246m───╯[0m
